--- a/index.html
+++ b/index.html
@@ -1,11 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RICHARD SANCHEZ</title>
+    <link rel="stylesheet" href="/HW-DOM/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row ">
+            <div class="section-blue col-4">
+                <div class="text-center">
+                    <img src="/HW-DOM/image/photo-profile.png" alt="cv-image" class="rounded-circle ">
+                </div>
+                <div class="container">
+                <div class="contact-section">
+                    <h4>contact</h4>
+                    <hr>
+                    <ul>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                            </svg>
+                            +123-456-7890
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z" />
+                            </svg>
+                            hello@reallygreatsite.com
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
+                            </svg>
+                            123 Anywhere St.,Any City
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-globe" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855A8 8 0 0 0 5.145 4H7.5zM4.09 4a9.3 9.3 0 0 1 .64-1.539 7 7 0 0 1 .597-.933A7.03 7.03 0 0 0 2.255 4zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a7 7 0 0 0-.656 2.5zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5zM8.5 5v2.5h2.99a12.5 12.5 0 0 0-.337-2.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5zM5.145 12q.208.58.468 1.068c.552 1.035 1.218 1.65 1.887 1.855V12zm.182 2.472a7 7 0 0 1-.597-.933A9.3 9.3 0 0 1 4.09 12H2.255a7 7 0 0 0 3.072 2.472M3.82 11a13.7 13.7 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5zm6.853 3.472A7 7 0 0 0 13.745 12H11.91a9.3 9.3 0 0 1-.64 1.539 7 7 0 0 1-.597.933M8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855q.26-.487.468-1.068zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.7 13.7 0 0 1-.312 2.5m2.802-3.5a7 7 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7 7 0 0 0-3.072-2.472c.218.284.418.598.597.933M10.855 4a8 8 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4z" />
+                            </svg>
+                            wwww.rellygreatsite.com
+
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="education-section">
+                    <h4>Education</h4>
+                    <hr>
+                    <ul>
+                        <li>
+                            <h6>2029-2030</h6>
+                            <h6>Wardiere university</h6>
+                        </li>
+                        <li>hMaster of Business Managment</li>
+                        <h6>Wardiere university</h6>
+                        <li>Bachelor of Business</li>
+                        <li>GPA:3.8/4.0</li>
+                    </ul>
+
+                </div>
+                <div class="skills-section">
+                    <h4>skills</h4>
+                    <hr>
+                    <ul>
+                        <li>Project Managment</li>
+                        <li>Public Realations</li>
+                        <li>Teamwork</li>
+                        <li>Time Managment</li>
+                        <li>Leadrship</li>
+                        <li>Effective Communication</li>
+                        <li>Critical Thinking</li>
+                    </ul>
+
+                </div>
+                <div class="languages-section">
+                    <h4>languages</h4>
+                    <hr>
+                    <ul>
+                        <li>English(fluent)</li>
+                        <li>France(Fluent)</li>
+                        <li>German(basics)</li>
+                        <li>Spanish(intermediate)</li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+            <div class="section-white col-8">
+                <h1>RICHARD SANCHEZ</h1>
+                <h5>Marketing manager</h5>
+                <div class="profile">
+                    <h3>profile</h3>
+                    <hr>
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, culpa optio obcaecati sunt veniam
+                        delectus, similique nemo, nisi labore accusantium temporibus iste distinctio laboriosam
+                        consequuntur ipsam rem nostrum rerum commodi.</p>
+
+                </div>
+                <div class="work-experience">
+                    <h3>work experience</h3>
+                    <hr>
+                    <div class="list-experience">
+                        <ul>
+                            <li>Borcelle Studio</li>
+                            <h6>Marketing Manager & Specialist</h6>
+                            <ul>
+                                <li>Develop and execute comprehensive marketing strategies and campaigns that align with the company's goals and objectives. </li>
+                                <li>Lead, mentor, and manage a high-performing marketing team, fostering a collaborative and results-driven work environment.</li>
+                                <li>Monitor brand consistency across marketing channels and materials.</li>
+                            </ul>
+                            <li>Fauget Studio</li>
+                            <h6>Marketing Manager & Specialist</h6>
+                            <ul>
+                                <li>Create and manage the marketing budget, ensuring efficient allocation of resources and optimizing ROI</li>
+                                <li>Oversee market research to identify emerging trends, customer needs, and competitor strategies.</li>
+                                <li>Monitor brand consistency across marketing channels and materials</li>
+                            </ul>
+                            <li>Studio Shodwe</li>
+                            <h6>Marketing Manager & Specialist</h6>
+                            <ul>
+                                <li>Develop and maintain strong relationships with partners, agencies, and vendors to support marketing initiatives</li>
+                                <li>Monitor and maintain brand consistency across all marketing channels and materials</li>
+                            </ul>
+
+                        </ul>
+
+                    </div>
+                    <div class="reference-section">
+                        <h4>Reference</h4>
+                        <hr>
+                        <div class="list-reference row">
+                            <div class="estelle-darcy col">
+                                <h6>Estelle Darcy</h6>
+                                <ul>
+                                    <li>Wardiere lnc./CTO</li>
+                                    <li><small>Phone:123-456-7890</small></li>
+                                    <li><small>Email: hello@reallygreatsite.com</small></li>
+                                </ul>
+
+                            </div>
+                            <div class="estelle-darcy col">
+                                <h6>Estelle Darcy</h6>
+                                <ul>
+                                    <li>Wardiere lnk./CTO</li>
+                                    <li><small>Phone:123-456-7890</small></li>
+                                    <li><small>Email: hello@reallygreatsite.com</small></li>
+                                </ul>
+
+                            </div>
+
+                            <div>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
